--- a/LocDisplayer/Info.plist
+++ b/LocDisplayer/Info.plist
@@ -2,25 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ISApiKey</key>
-	<string>Insert your Api Key</string>
-	<key>ISEServerType</key>
-	<string>Insert the ISEServerType</string>
-	<key>ISServerURL</key>
-	<string>Insert the ISServerURL</string>
-	<key>ISSite</key>
-	<real>0</real>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs your location to locate you inside buildings</string>
-	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>App uses Bluetooth to provide you with high accuracy indoor location</string>
-	<key>ISELocationFlag</key>
-	<array>
-		<string>ISELocationFlagGps</string>
-		<string>ISELocationFlagBle</string>
-		<string>ISELocationFlagCompass</string>
-		<string>ISELocationFlagMems</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -37,8 +18,27 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>ISApiKey</key>
+	<string>9f3c8008-8b62-40e8-9263-555d3bb21fd8</string>
+	<key>ISELocationFlag</key>
+	<array>
+		<string>ISELocationFlagGps</string>
+		<string>ISELocationFlagBle</string>
+		<string>ISELocationFlagCompass</string>
+		<string>ISELocationFlagMems</string>
+	</array>
+	<key>ISEServerType</key>
+	<string>ISEServerTypeProd</string>
+	<key>ISServerURL</key>
+	<string>https://services2.prod.insiteo.com/v3/Insiteo.Dispatch.Prod/Insiteo.Dispatch.svc/</string>
+	<key>ISSite</key>
+	<integer>559</integer>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>App uses Bluetooth to provide you with high accuracy indoor location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs your location to locate you inside buildings</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -50,8 +50,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
