--- a/LocDisplayer/Info.plist
+++ b/LocDisplayer/Info.plist
@@ -32,14 +32,18 @@
 	<key>ISServerURL</key>
 	<string>Insert your ISServerURL</string>
 	<key>ISSite</key>
-	<real>0</real>
+	<integer>0</integer>
 	<key>ISERenderMode</key>
 	<string>ISERenderMode2D</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>App uses Bluetooth to provide you with high accuracy indoor location</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app needs your location to locate you inside buildings</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs your location to locate you inside buildings</string>
+	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This app needs your location to locate you inside buildings</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
